--- a/ros2_ws/src/robot_description/config/ros_gz_bridge.yaml
+++ b/ros2_ws/src/robot_description/config/ros_gz_bridge.yaml
@@ -22,9 +22,28 @@
   ros_type_name: "std_msgs/msg/Float64"
   gz_type_name: "gz.msgs.Double"
   direction: ROS_TO_GZ
+  
+- ros_topic_name: "/hip_joint/cmd_pos"
+  gz_topic_name: "model/robot/joint/hip_joint/0/cmd_pos"
+  ros_type_name: "std_msgs/msg/Float64"
+  gz_type_name: "gz.msgs.Double"
+  direction: ROS_TO_GZ
 
-- ros_topic_name: "contact"
-  gz_topic_name: "model/robot/contact"
-  ros_type_name: "std_msgs/msg/Bool"
-  gz_type_name: "gz.msgs.Boolean"
+- ros_topic_name: "/knee_joint/cmd_pos"
+  gz_topic_name: "model/robot/joint/knee_joint/0/cmd_pos"
+  ros_type_name: "std_msgs/msg/Float64"
+  gz_type_name: "gz.msgs.Double"
+  direction: ROS_TO_GZ
+
+- ros_topic_name: "/contact"
+  gz_topic_name: "/model/robot/sensors/contact"
+  ros_type_name: "ros_gz_interfaces/msg/Contacts"
+  gz_type_name: "gz.msgs.Contacts"
+  direction: GZ_TO_ROS
+
+
+- ros_topic_name: "imu"
+  gz_topic_name: "model/robot/sensors/imu"
+  ros_type_name: "sensor_msgs/msg/Imu"
+  gz_type_name: "gz.msgs.IMU"
   direction: GZ_TO_ROS
