--- a/ros2_ws/src/robot_control/setup.cfg
+++ b/ros2_ws/src/robot_control/setup.cfg
@@ -2,3 +2,5 @@
 script_dir=$base/lib/robot_control
 [install]
 install_scripts=$base/lib/robot_control
+[build_scripts]
+executable = /usr/bin/env python3
