--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ pillow==11.2.1
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 PyYAML==6.0.2
+scipy==1.15.3
 setuptools==68.1.2
 six==1.17.0
 typeguard==4.4.2
